--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "events": "^3.1.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.5",
     "path": "^0.12.7",
+    "prettier": "^2.0.5",
     "socket.io-client": "^2.3.0",
-    "sonus": "^1.0.3"
+    "sonus": "git+https://github.com/sdetweil/sonus.git"
   }
 }
