--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "events": "^3.1.0",
+    "get-port": "^5.1.1",
     "install": "^0.13.0",
-    "npm": "^6.14.5",
     "path": "^0.12.7",
     "prettier": "^2.0.5",
     "socket.io-client": "^2.3.0",
