--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "sam detweiler",
   "license": "ISC",
   "dependencies": {
+    "electron-rebuild": "^1.11.0",
     "events": "^3.1.0",
     "get-port": "^5.1.1",
-    "install": "^0.13.0",
     "path": "^0.12.7",
     "prettier": "^2.0.5",
+    "sleep": "^6.2.0",
     "socket.io-client": "^2.3.0",
     "sonus": "git+https://github.com/sdetweil/sonus.git"
   }
